--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fast-safe-stringify",
   "version": "1.0.5",
-  "description": "",
+  "description": "Safely and quickly serialize JavaScript objects",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +11,17 @@
   "devDependencies": {
     "fastbench": "^1.0.1",
     "json-stringify-safe": "^5.0.1"
-  }
+  },
+  "dependencies": {
+    "fastbench": "^1.0.1",
+    "json-stringify-safe": "^5.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/davidmarkclements/fast-safe-stringify.git"
+  },
+  "bugs": {
+    "url": "https://github.com/davidmarkclements/fast-safe-stringify/issues"
+  },
+  "homepage": "https://github.com/davidmarkclements/fast-safe-stringify#readme"
 }
