--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "typings": "index",
   "devDependencies": {
+    "clone": "^1.0.2",
     "fastbench": "^1.0.1",
     "json-stringify-safe": "^5.0.1",
     "standard": "^6.0.8",
