--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "fast-safe-stringify",
   "version": "1.2.3",
   "description": "Safely and quickly serialize JavaScript objects",
+  "keywords": [
+    "stable",
+    "stringify",
+    "JSON",
+    "JSON.stringify",
+    "safe",
+    "serialize"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "standard && tap test.js"
