--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
     "test": "standard && tap test.js"
   },
   "author": "David Mark Clements",
+  "contributors": [
+    "Ruben Bridgewater",
+    "Matteo Collina",
+    "Ben Gourley",
+    "Gabriel Lesperance",
+    "Alex Liu",
+    "Christoph Walcher",
+    "Nicholas Young"
+  ],
   "license": "MIT",
   "typings": "index",
   "devDependencies": {
