--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "standard && tap test.js"
+    "test": "standard && tap test.js",
+    "benchmark": "node benchmark.js"
   },
   "author": "David Mark Clements",
   "contributors": [
@@ -30,8 +31,8 @@
     "clone": "^2.1.0",
     "fastbench": "^1.0.1",
     "json-stringify-safe": "^5.0.1",
-    "standard": "^9.0.0",
-    "tap": "^10.0.0"
+    "standard": "^11.0.0-beta.0",
+    "tap": "^11.0.0"
   },
   "repository": {
     "type": "git",
