--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
   "bugs": {
     "url": "https://github.com/davidmarkclements/fast-safe-stringify/issues"
   },
-  "homepage": "https://github.com/davidmarkclements/fast-safe-stringify#readme"
+  "homepage": "https://github.com/davidmarkclements/fast-safe-stringify#readme",
+  "dependencies": {}
 }
