--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "license": "MIT",
   "typings": "index",
   "devDependencies": {
+    "benchmark": "^2.1.4",
     "clone": "^2.1.0",
-    "fastbench": "^1.0.1",
     "json-stringify-safe": "^5.0.1",
     "standard": "^11.0.0-beta.0",
     "tap": "^11.0.0"
