--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "benchmark": "^2.1.4",
     "clone": "^2.1.0",
     "json-stringify-safe": "^5.0.1",
-    "standard": "^11.0.0-beta.0",
-    "tap": "^11.0.0"
+    "standard": "^11.0.0",
+    "tap": "^12.0.0"
   },
   "repository": {
     "type": "git",
